--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="login">Login</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="logout">Logout</a>
+              </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li>
