--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,13 @@
 {% block h1 %}Login Page{% endblock %}
 
 {% block content %}
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for msg in messages %}
+            <p>{{msg}}</p>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 <form action="#" method="POST">
     <p>Name:</p>
     <p><input type="text" name="nm" /></p>
