--- a/templates/base.html
+++ b/templates/base.html
@@ -16,17 +16,17 @@
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="hobbit">Hobbit</a>
+              <a class="nav-link" href="user">User</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Other
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="hobbit">hobbit</a>
                 <a class="dropdown-item" href="boss">boss</a>
-                <a class="dropdown-item" href="failpage">Fail Page</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="gig">Gig</a>
+                <a class="dropdown-item" href="failpage">Fail Page</a>
               </div>
             </li>
             <li class="nav-item">
@@ -45,8 +45,11 @@
           </form>
         </div>
       </nav>
-    <h1>{% block h1 %}{% endblock %}</h1>
-    <h1>{% block content %}{% endblock %}</h1>
+    <div class="container-fluid">
+    <h2>{% block h1 %}{% endblock %}</h2>
+    <p>{% block content %}{% endblock %}</p>
+    </div>    
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
