--- a/templates/user.html
+++ b/templates/user.html
@@ -11,5 +11,8 @@
         {% endif %}
     {% endwith %}
     <p>Hello: {% print(session["user"]) %}</p>
-    
+    <form action="#" method="POST">
+        <p><input type="email" name="email" placeholder="Enter email" value="{{email if email}}"/></p>
+        <p><input type="submit" value="submit" /></p>
+    </form>
 {% endblock %}
