--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="hobbit">hobbit</a>
                 <a class="dropdown-item" href="boss">boss</a>
+                <a class="dropdown-item" href="view">view all</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="failpage">Fail Page</a>
               </div>
